[project]
name = "first-agent-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=7.5.0",
    "google-search-results>=2.4.2",
    "gradio-client>=1.10.3",
    "langchain-community>=0.3.25",
    "markdownify>=1.0.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "smolagents",
    "smolagents[litellm]",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets",
]
